foundryvtt/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foundry-foundry-vtt
  namespace: foundry
  labels:
    app.kubernetes.io/instance: foundry
    app.kubernetes.io/name: foundry-vtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: foundry
      app.kubernetes.io/name: foundry-vtt
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: foundry
        app.kubernetes.io/name: foundry-vtt
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundry-foundry-vtt
        - name: secret-aws
          secret:
            secretName: foundry-aws-conf
            defaultMode: 420
      containers:
        - name: foundry-vtt
          image: felddy/foundryvtt:release
          ports:
            - name: http
              containerPort: 30000
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: secret-aws
              readOnly: true
              mountPath: /etc/secretaws/
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 600
            timeoutSeconds: 1
            periodSeconds: 25
            successThreshold: 1
            failureThreshold: 40
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
